financial/mongodb-mern-bank-account/springboot-relational-stack/account-springboot-deployment_template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-springboot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      volumes:
        - name: creds
          secret:
            secretName: financialdb-wallet-secret
            defaultMode: 420
      containers:
        - name: account-springboot
          image: IMAGE_PLACEHOLDER
          imagePullPolicy: Always
          ports:
            - containerPort: 443
          resources: {}
          volumeMounts:
            - name: creds
              mountPath: /oraclefinancial/creds
      restartPolicy: Always
#      imagePullSecrets:
#        - name: regcred
#      schedulerName: default-scheduler
