financial/mongodb-mern-bank-account/springboot-relational-stack/account-springboot-service-ClusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: account
spec:
  type: ClusterIP
  selector:
    app: account
  ports:
    - protocol: TCP
      port: 8080              # External
      targetPort: 8080
