financial/mongodb-mern-bank-account/springboot-relational-stack/account-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: financial
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
    - hosts:
        - oracledev.ai
      secretName: oracledev-ai-tls
  rules:
    - host: oracledev.ai
      http:
        paths:
          - path: /financial/accounts-api
            pathType: Prefix
            backend:
              service:
                name: backend-springboot
                port:
                  number: 8090
